fix DataGrid visual overflow of content over/under header; add empty footer to OptionAmountListInput;

--- a/src/ui/form/element/input/optionamountlist/OptionAmountListInput.js.css
+++ b/src/ui/form/element/input/optionamountlist/OptionAmountListInput.js.css
@@ -8,7 +8,6 @@
     background-color: var(--input-back-color, #ffffff);
     border: solid var(--form-border-width, 2px) var(--form-border-color, #000000);
     border-radius: var(--form-border-radius, 6px);
-    overflow: hidden;
 }
 :host(:disabled) {
     color: var(--input-disabled-text-color, #757575) !important;
